Added some snippets, changed i3 autostart options

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -234,8 +234,10 @@ exec redshift
 # Specific workspaces
 exec --no-startup-id i3-msg 'workspace 1; exec sleep 10 && firefox-nightly'
 exec --no-startup-id i3-msg 'workspace 2; exec sleep 10 && thunderbird'
-exec --no-startup-id i3-msg 'workspace 2; exec sleep 10 && pidgin'
-exec --no-startup-id i3-msg 'workspace 2; exec sleep 10 && rambox'
+#exec --no-startup-id i3-msg 'workspace 2; exec sleep 10 && pidgin'
+#exec --no-startup-id i3-msg 'workspace 2; exec sleep 10 && rambox'
+#exec --no-startup-id i3-msg 'workspace 2; exec sleep 11 && firefox-nightly https://www.messenger.com https://ctf-mcgill.slack.com https://www.textnow.com/messaging'
+exec --no-startup-id i3-msg 'workspace 2; exec sleep 10 && chromium'
 #exec --no-startup-id i3-msg 'workspace 3; exec pcmanfm'
 exec --no-startup-id i3-msg 'workspace 3; exec dolphin'
 
