--- a/.config/i3/config
+++ b/.config/i3/config
@@ -194,6 +194,8 @@ bindsym ctrl+Mod1+Down move workspace to output down
 #bindsym $mod+c exec pcmanfm
 bindsym $mod+c exec dolphin
 bindsym $mod+b exec firefox-nightly
+bindsym $mod+Shift+b exec chromium
+#bindsym $mod+Shift+l exec lollypop
 bindsym $mod+g exec keepassx2
 bindsym $mod+x exec emacs 
 bindsym $mod+p exec pavucontrol
@@ -236,7 +238,6 @@ exec --no-startup-id i3-msg 'workspace 1; exec sleep 10 && firefox-nightly'
 exec --no-startup-id i3-msg 'workspace 2; exec sleep 10 && thunderbird'
 #exec --no-startup-id i3-msg 'workspace 2; exec sleep 10 && pidgin'
 #exec --no-startup-id i3-msg 'workspace 2; exec sleep 10 && rambox'
-#exec --no-startup-id i3-msg 'workspace 2; exec sleep 11 && firefox-nightly https://www.messenger.com https://ctf-mcgill.slack.com https://www.textnow.com/messaging'
 exec --no-startup-id i3-msg 'workspace 2; exec sleep 10 && chromium'
 #exec --no-startup-id i3-msg 'workspace 3; exec pcmanfm'
 exec --no-startup-id i3-msg 'workspace 3; exec dolphin'
