Trying KeePassXC instead of KeePassX2

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -196,7 +196,7 @@ bindsym $mod+c exec dolphin
 bindsym $mod+b exec firefox-nightly
 bindsym $mod+Shift+b exec chromium
 #bindsym $mod+Shift+l exec lollypop
-bindsym $mod+g exec keepassx2
+bindsym $mod+g exec keepassxc
 bindsym $mod+x exec emacs 
 bindsym $mod+p exec pavucontrol
 bindsym $mod+Shift+v exec vlc
