--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -19,8 +19,8 @@ color14_i3wmthemer	    = ${xrdb:color14}
 color15_i3wmthemer	    = ${xrdb:color15}
 
 [bar/main_bar]
-; monitor = eDP1
-monitor = HDMI1
+monitor = eDP1
+:monitor = HDMI1
 bottom = false
 width = 100%
 height = 20
