Execute tmux on i3 xfce term startup

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -226,7 +226,7 @@ bindsym ctrl+Mod1+t exec xfce4-terminal --drop-down
 # Autostart
 exec nm-applet
 exec dropbox
-exec xfce4-terminal --drop-down
+exec xfce4-terminal --drop-down -x tmux
 exec shutter --min_at_startup
 #exec feh --bg-scale /home/jl/Downloads/hidden_constellation_by_kpekep-dbkcvjk.png
 exec feh --bg-scale "/home/jl/i3wm-themer/themes/Colors/Colors.png" 
