Removed discord from autostart and update emacs.d

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -241,7 +241,7 @@ exec /usr/lib/notify-osd/notify-osd
 # Specific workspaces
 exec --no-startup-id i3-msg 'workspace 1; exec sleep 10 && firefox-nightly'
 exec --no-startup-id i3-msg 'workspace 2; exec sleep 10 && thunderbird'
-exec --no-startup-id i3-msg 'workspace 2; exec sleep 10 && discord-canary'
+#exec --no-startup-id i3-msg 'workspace 2; exec sleep 10 && discord-canary'
 #exec --no-startup-id i3-msg 'workspace 2; exec sleep 10 && pidgin'
 #exec --no-startup-id i3-msg 'workspace 2; exec sleep 10 && rambox'
 #exec --no-startup-id i3-msg 'workspace 2; exec sleep 10 && chromium'
