--- a/.config/i3/config
+++ b/.config/i3/config
@@ -180,7 +180,7 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-	i3bar_command ~/Dropbox/bin/polybar.sh 
+	i3bar_command ~/Dropbox/bin/polybar.sh
     	#status_command i3status
 }
 
@@ -193,10 +193,10 @@ bindsym ctrl+Mod1+Up move workspace to output up
 bindsym ctrl+Mod1+Down move workspace to output down
 #bindsym $mod+c exec pcmanfm
 bindsym $mod+c exec dolphin
-bindsym $mod+b exec firefox-nightly
+bindsym $mod+b exec firefox
 bindsym $mod+Shift+b exec chromium
 bindsym $mod+g exec keepassxc
-bindsym $mod+x exec emacs 
+bindsym $mod+x exec emacs
 bindsym $mod+p exec pavucontrol
 bindsym $mod+Shift+v exec vlc
 bindsym $mod+Shift+x exec virtualbox
@@ -214,7 +214,7 @@ mode "$light_mode" {
   bindsym 5 exec light -S 50
   bindsym 6 exec light -S 75
   bindsym 7 exec light -S 100
-  
+
   bindsym Escape mode "default"
 }
 
@@ -229,7 +229,7 @@ exec dropbox
 exec xfce4-terminal --drop-down -x tmux
 exec shutter --min_at_startup
 #exec feh --bg-scale /home/jl/Downloads/hidden_constellation_by_kpekep-dbkcvjk.png
-exec feh --bg-scale "/home/jl/i3wm-themer/themes/Colors/Colors.png" 
+exec feh --bg-scale "/home/jl/i3wm-themer/themes/Colors/Colors.png"
 exec syndaemon -i 0.3 -t -K -R # Disable touchpad for 0.3 seconds on each keypress aside from modifier keys
 #exec compton
 exec redshift
@@ -239,7 +239,7 @@ exec redshift
 exec /usr/lib/notify-osd/notify-osd
 
 # Specific workspaces
-exec --no-startup-id i3-msg 'workspace 1; exec sleep 10 && firefox-nightly'
+exec --no-startup-id i3-msg 'workspace 1; exec sleep 10 && firefox'
 exec --no-startup-id i3-msg 'workspace 2; exec sleep 10 && thunderbird'
 #exec --no-startup-id i3-msg 'workspace 2; exec sleep 10 && discord-canary'
 #exec --no-startup-id i3-msg 'workspace 2; exec sleep 10 && pidgin'
