--- a/.config/i3/config
+++ b/.config/i3/config
@@ -196,7 +196,7 @@ bindsym $mod+c exec dolphin
 bindsym $mod+b exec firefox
 bindsym $mod+Shift+b exec chromium
 bindsym $mod+g exec keepassxc
-bindsym $mod+x exec emacs
+bindsym $mod+x exec "emacsclient -c -a emacs"
 bindsym $mod+p exec pavucontrol
 bindsym $mod+Shift+v exec vlc
 bindsym $mod+Shift+x exec virtualbox
@@ -226,7 +226,7 @@ bindsym ctrl+Mod1+t exec xfce4-terminal --drop-down
 # Autostart
 exec nm-applet
 exec dropbox
-exec xfce4-terminal --drop-down
+exec xfce4-terminal --drop-down -x tmux
 exec shutter --min_at_startup
 #exec feh --bg-scale /home/jl/Downloads/hidden_constellation_by_kpekep-dbkcvjk.png
 exec feh --bg-scale "/home/jl/i3wm-themer/themes/Colors/Colors.png"
