Change to firefox-nightly

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -193,7 +193,7 @@ bindsym ctrl+Mod1+Up move workspace to output up
 bindsym ctrl+Mod1+Down move workspace to output down
 #bindsym $mod+c exec pcmanfm
 bindsym $mod+c exec dolphin
-bindsym $mod+b exec firefox
+bindsym $mod+b exec firefox-nightly
 bindsym $mod+Shift+b exec chromium
 bindsym $mod+g exec keepassxc
 bindsym $mod+x exec "emacsclient -c -a emacs"
@@ -239,7 +239,7 @@ exec redshift
 exec /usr/lib/notify-osd/notify-osd
 
 # Specific workspaces
-exec --no-startup-id i3-msg 'workspace 1; exec sleep 10 && firefox'
+exec --no-startup-id i3-msg 'workspace 1; exec sleep 10 && firefox-nightly'
 exec --no-startup-id i3-msg 'workspace 2; exec sleep 10 && thunderbird'
 #exec --no-startup-id i3-msg 'workspace 2; exec sleep 10 && discord-canary'
 #exec --no-startup-id i3-msg 'workspace 2; exec sleep 10 && pidgin'
