Add strict new session name for tmux, add polymode for .Rmd

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -227,7 +227,7 @@ bindsym ctrl+Mod1+t exec xfce4-terminal --drop-down
 # Autostart
 exec nm-applet
 exec dropbox
-exec xfce4-terminal --drop-down -x tmux
+exec xfce4-terminal --drop-down -x tmux new-session -s 0
 exec flameshot
 #exec feh --bg-scale /home/jl/Downloads/hidden_constellation_by_kpekep-dbkcvjk.png
 exec feh --bg-scale "/home/jl/i3wm-themer/themes/Colors/Colors.png"
