oh-my-zsh and other configuration improvements
- Add oh-my-zsh submodule with extra plugins for a more portable
installation.
- Add .tmux.conf pointing to .tmux.conf of tmux submodule.
- Improve configure.sh by not copying $HOME files recursively, instead
just copying the files and directories at top level.

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "doom-emacs"]
 	path = .emacs.d
 	url = https://github.com/hlissner/doom-emacs.git
+[submodule "oh-my-zsh"]
+	path = oh-my-zsh
+	url = https://github.com/julianlore/ohmyzsh.git
