Fix oh-my-zsh name

--- a/.gitmodules
+++ b/.gitmodules
@@ -11,5 +11,5 @@
 	path = .emacs.d
 	url = https://github.com/hlissner/doom-emacs.git
 [submodule "oh-my-zsh"]
-	path = oh-my-zsh
+	path = .oh-my-zsh
 	url = https://github.com/julianlore/ohmyzsh.git
